# reachy-speechbrain-api

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  app.py  pyproject.toml  storage.py
tests/: test_api.py  test_storage.py
